Adição do efeito botão

--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
         <div class="div_conteudo_site" style="background: white;">
             <h2 class="subtitulo_conteudo_site subtitulo_conteudo_site_secundario"><span class="subtitulo_conteudo_site_small div_personalizada_normal" style="transform: rotate(0deg);">Prémios Incríveis para você!</span><br>
-            <span class="subtitulo_conteudo_site_big">Descubra os <span class="div_personalizada_normal">prémios</span> do 50Bué.</span></h2>
-            <p class="texto_conteudo_site texto_conteudo_site_secundario">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quis dolores quibusdam debitis saepe vero quisquam, voluptatum odio, fuga optio recusandae mollitia voluptatibus officiis consectetur expedita laborum repellat consequuntur dignissimos? Lorem ipsum dolor sit amet consectetur adipisicing elit. Eligendi quasdi culpa repellat cumque incidunt, blanditiis atque in non soluta dolorum accusantium veritatis deleniti officia exercitationem impedit a est optio? jsajkjkajkatiae.</p>
+            <span class="subtitulo_conteudo_site_big">Descubra os prémios do 50Bué.</span></h2>
+            <p class="texto_conteudo_site texto_conteudo_site_secundario">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Aspernatur quis dolores quibusdam debitis saepe vero quisquam, voluptatum odio, fuga optio recusandae mollitia voluptatibus officiis consectetur expedita laborum repellat consequuntur dignissimos?</p>
         </div>
 
     </main>
